// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pruebas GifExpertAPP debe de mostar una lista de categorias 1`] = `
<Fragment>
  <h2>
    GifExpertAPP
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="one piece"
      key="one piece"
    />
    <GifGrid
      category="naruto"
      key="naruto"
    />
  </ol>
</Fragment>
`;

exports[`pruebas GifExpertAPP debe de renderizar el componente 1`] = `
<Fragment>
  <h2>
    GifExpertAPP
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
